Change webpack to rollup

--- a/test/index.html
+++ b/test/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Page Title</title>
+  <title>UIPlay Test</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <script src='../browser/uiplay.js'></script>
+  <script src='../dist/uiplay.js'></script>
 </head>
 <body>
 
@@ -17,7 +17,7 @@
     'orders_notify.mp3',
     {
       volume: 1,
-      debounceMillis: 1000
+      throttleMillis: 1000
     }
   );
   
